--- a/index.html
+++ b/index.html
@@ -30,12 +30,8 @@
       .navbar-scrolled{
         background-color: black;
         opacity: 1;
-        padding-top: 10px;
+        padding-top: 0px;
         padding-bottom: 10px;
-      }
-      .carousel-item {
-        top: 0;
-        height: 753px;
       }
       .darkened-image {
         filter: brightness(50%);
@@ -129,6 +125,58 @@
         border-radius: 50%;
         padding: 20px;
       }
+      .vid-img{
+        max-width: 635px;
+        height: 460px;
+      }
+      .bi-check2-all{
+        color: orange;
+      }
+      .line{
+        line-height: 1.34;
+      }
+      .carousel-item {
+        top: 0;
+        height: 753px;
+      }
+      .card{
+        background-color: white;
+      }
+      .card>.card-body >.card-title{
+        color: rgba(255, 166, 0, 0.668);
+      }
+      .card > .card-body > .card-subtitle{
+        color: rgb(85, 85, 85);
+      }
+      .card > .card-body > .card-text{
+        color: gray;
+      }
+      .card:hover{
+        background-color: rgba(255, 166, 0, 0.764);
+      }
+      .card:hover > .card-body > .card-title{
+        color: white !important;
+      }
+      .card:hover > .card-body > .card-subtitle{
+        color: white;
+      }
+      .card:hover > .card-body > .card-text{
+        color: white;
+      }
+      .container {
+        position: relative;
+      }
+      .centered {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+      /* @media (max-width: 1280px) {
+        .carousel-item {
+        min-height: 1300px;
+      }
+      } */
     </style>
    </head>
    <body>
@@ -220,11 +268,11 @@
                   <span style="color: orange;">Delicious</span> Restaurant
                 </h1>
                 <br>
-                <pre class="text-center pe-5">
+                <p class="text-center pe-5 col-6 mx-auto">
                   Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam.
                   Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque
                   accusamus repellendus deleniti vel. Minus et tempore modi architecto.
-                </pre>
+                </p>
                 <br>
                 <div class="">
                   <a class="btn btn-theme btn-sm btn-min-block" href="#">OUR MENU</a><a class="btn btn-theme btn-sm btn-min-block" href="#">BOOK A TABLE</a>
@@ -240,11 +288,11 @@
                 Lorem Ipsum Dolor
                 </h1>
                 <br>
-                <pre class="text-center pe-5">
+                <p class="text-center pe-5 col-6 mx-auto">>
                   Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam.
                   Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque
                   accusamus repellendus deleniti vel. Minus et tempore modi architecto.
-                </pre>
+                </p>
                 <br>
                 <div class="">
                   <a class="btn btn-theme btn-sm btn-min-block" href="#">OUR MENU</a><a class="btn btn-theme btn-sm btn-min-block" href="#">BOOK A TABLE</a>
@@ -260,11 +308,11 @@
                   Sequi ea ut et est quaerat
                 </h1>
                 <br>
-                <pre class="text-center pe-5">
+                <p class="class="text-center pe-5 col-6 mx-auto">">
                   Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam.
                   Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque
                   accusamus repellendus deleniti vel. Minus et tempore modi architecto.
-                </pre>
+                </p>
                 <br>
                 <div class="">
                   <a class="btn btn-theme btn-sm btn-min-block" href="#">OUR MENU</a><a class="btn btn-theme btn-sm btn-min-block" href="#">BOOK A TABLE</a>
@@ -281,6 +329,70 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+    </div>
+    <div class="row mw-100 mb-5 pb-5">
+      <div class="container col-5 mt-5 pe-5">
+        <img src="img/about.jpg" class="vid-img" alt="">
+        <div class="centered"><a href="https://www.youtube.com/watch?v=jDDaplaOz7Q"> <i class="bi bi-play-circle-fill" style="font-size: 70px; color:#ffb03b;"></i></a></div>
+      </div>
+      <div class="col-7 ps-5 pe-5">
+        <p class="text-secondary ms-5 pe-5 ps-1 mt-5 line" style="font-size: 16px;">
+
+
+          <span class="title text-dark" style="font-size: 30px;">Eum ipsam laborum deleniti velit pariatur architecto
+            <br>aut nihil</span><br>
+
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit<br><br>
+
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua.
+            <br><br>
+        <span class="text-black" style="font-weight: 400;">
+          <i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. <br><br>
+          <i class="bi bi-check2-all"></i> Duis aute irure dolor in reprehenderit in voluptate velit. <br><br>
+          <i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in <br>&nbsp;&nbsp;&nbsp;&nbsp; reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla <br>&nbsp;&nbsp;&nbsp;&nbsp; pariatur.
+        </span> <br><br>
+        Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+      </p>
+      </div>
+    </div>
+    <div class="row  mw-100">
+      <div class="col-12">
+        <p class="text-dark text-center mt-5 line" style="font-size: 16px;">
+          <span class="title text-dark" style="font-size: 30px;">Why choose </span> <span class="title" style="color:orange; font-size: 30px;">Restaurant</span><br><br>
+          Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci <br> expedita at voluptas atque vitae autem.
+        </p>
+      </div>
+    </div>
+    <div class="row card-group mt-4 mw-100">
+      <div class="col-lg-4 col-12">
+        <div class="card shadow ms-auto" style="width: 420px;" >
+          <div class="card-body ms-3">
+            <h5 class="card-title mt-4" style="font-weight:bold; font-size: 27px;">01</h5>
+            <h3 class="card-subtitle my-3 title" style="font-size: 22px;">Lorem Ipsum</h3>
+            <p class="card-text  lead mb-5" style="font-size: 17px; font-weight: 400;">Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-12">
+        <div class="card shadow mx-auto" style="width: 420px;" >
+          <div class="card-body ms-3">
+            <h5 class="card-title mt-4" style="font-weight:bold; font-size: 27px;">02</h5>
+            <h3 class="card-subtitle my-3 title" style="font-size: 22px;">Repellat Nihil</h3>
+            <p class="card-text lead mb-5" style="font-size: 17px; font-weight: 400;">Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-12">
+        <div class="card shadow" style="width: 420px;" >
+          <div class="card-body ms-3">
+            <h5 class="card-title mt-4" style="font-weight:bold; font-size: 27px;">03</h5>
+            <h3 class="card-subtitle my-3 title" style="font-size: 22px;">Card subtitle</h3>
+            <p class="card-text  lead mb-5" style="font-size: 17px; font-weight: 400;">Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+          </div>
+        </div>
+      </div>
     </div>
     <div style="height: 1000px">
         <!-- just to make scrolling effect possible -->
