--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
       body{
@@ -23,6 +23,9 @@
       /* .f-nav-scrolled{
         display: none;
       } */
+      .orange{
+        color: orange;
+      }
       .navbar{
         padding-top: 45px;
         transition: all 0.5;
@@ -172,6 +175,35 @@
         left: 50%;
         transform: translate(-50%, -50%);
       }
+      .nav-pills .nav-link{
+        padding: 5px 15px;
+        color: black;
+        border: 2px solid #ffb03b;
+        background-color: white;
+        border-radius: 25px;
+      }
+      .nav-pills .nav-link.active{
+        padding: 5px 15px;
+        color: black;
+        border: 2px solid #ffb03b;
+        background-color: white;
+        border-radius: 25px;
+      }
+      .nav-pills .nav-link:hover{
+        color: white;
+        background-color: orange;
+        border-radius: 25px;
+      }
+      .nav-pills .nav-link:focus{
+        color: white;
+        background-color: orange;
+        border-radius: 25px;
+      }
+      .row>.col-12.text-muted{
+        font-size: 15px;
+        font-weight: 400;
+      }
+
       /* @media (max-width: 1280px) {
         .carousel-item {
         min-height: 1300px;
@@ -246,8 +278,8 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
             </li>
-            <li class="nav-item me-5 px-2">
-              <a class="btn btn-orange p-1 px-4 " href="#">Book a table</a>
+            <li class="nav-item me-5 px-2 mt-2">
+              <a class="btn-orange py-2 px-4 mt-5" href="#">Book a table</a>
             </li>
           </ul>
         </div>
@@ -394,6 +426,282 @@
         </div>
       </div>
     </div>
+    <div class="row  mw-100">
+      <div class="col-12">
+        <p class="text-dark text-center mt-5 pt-5 line" style="font-size: 16px;">
+          <span class="title text-dark" style="font-size: 30px;">Check our tasty </span> <span class="title" style="color:orange; font-size: 30px;">Menu</span><br><br>
+        </p>
+      </div>
+    </div>
+    <div class="row mw-100 text-black d-flex justify-content-center">
+      <div class="tabs-to-dropdown col-10">
+        <div class="nav-wrapper d-flex align-items-center justify-content-center ">
+          <ul class="nav nav-pills d-none d-md-flex " id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <a class="nav-link active" id="pills-showAll-tab" data-toggle="pill" href="#pills-showAll" role="tab" aria-controls="pills-showAll" aria-selected="true" aria-expanded="false">Show All</a>
+            </li>
+            <li class="nav-item mx-2" role="presentation">
+              <a class="nav-link" id="pills-starters-tab" data-toggle="pill" href="#pills-starters" role="tab" aria-controls="pills-product" aria-selected="false" aria-expanded="false">Starters</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="pills-salads-tab" data-toggle="pill" href="#pills-salads" role="tab" aria-controls="pills-salads" aria-selected="false" aria-expanded="false">Salads</a>
+            </li>
+            <li class="nav-item mx-2" role="presentation">
+              <a class="nav-link" id="pills-specially-tab" data-toggle="pill" href="#pills-specially" role="tab" aria-controls="pills-specially" aria-selected="false" aria-expanded="false">Specialty</a>
+            </li>
+          </ul>
+        </div>
+        <div class="tab-content" id="pills-tabContent">
+          <div class="tab-pane fade show active" id="pills-showAll" role="tabpanel" aria-labelledby="pills-showAll-tab">
+              <div class="row mt-5">
+                <div class="col-6 ps-3">
+                  <div class="row ps-5">
+                    <p class="col-3 mb-3 orange fw-bold" style="font-size: 17px;">Lobster Bisque</p>
+                    <div class="col-8"><hr></div>
+                  <div class="col-1 fw-bold ">5.95$</div>
+                  <div class="row">
+                    <div class="col-12 text-muted">
+                      Lorem, deren, trataro, filede, nerada
+                    </div>
+                  </div>
+                  </div>
+                </div>
+                <div class="col-6 ">
+                  <div class="row ps-5">
+                    <p class="col-3 mb-3 orange fw-bold" style="font-size: 18px;">Bread barrel</p>
+                    <div class="col-8"><hr></div>
+                  <div class="col-1 fw-bold">6.95$</div>
+                  <div class="row">
+                    <div class="col-12 text-muted">
+                      Lorem, deren, trataro, filede, nerada
+                    </div>
+                  </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row mt-5">
+                <div class="col-6 ps-3">
+                  <div class="row ps-5">
+                    <p class="col-3 mb-3 orange fw-bold" style="font-size: 17px;">Crab Cake</p>
+                    <div class="col-8"><hr></div>
+                  <div class="col-1 fw-bold">7.95$</div>
+                  <div class="row">
+                    <div class="col-12 text-muted">
+                      A delicate crab cake served on a toasted roll with lettuce and tartar sauce
+                    </div>
+                  </div>
+                  </div>
+                </div>
+                <div class="col-6 ps-5">
+                  <div class="row ps-2">
+                    <p class="col-4 mb-3 orange fw-bold" style="font-size: 18px;">Caesar Selections</p>
+                    <div class="col-7"><hr></div>
+                  <div class="col-1 fw-bold">8.95$</div>
+                  <div class="row">
+                    <div class="col-12 text-muted">
+                      Lorem, deren, trataro, filede, nerada
+                    </div>
+                  </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row mt-5">
+                <div class="col-6 ps-3">
+                  <div class="row ps-5">
+                    <p class="col-3 mb-3 orange fw-bold" style="font-size: 17px;">Tuscan Grilled</p>
+                    <div class="col-8"><hr></div>
+                  <div class="col-1 fw-bold">9.95$</div>
+                  <div class="row">
+                    <div class="col-12 text-muted">
+                      Grilled chicken with provolone, artichoke hearts, and roasted red pesto
+                    </div>
+                  </div>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="row ps-5">
+                    <p class="col-4 mb-3 orange fw-bold" style="font-size: 18px;">Mozzarella Stick</p>
+                    <div class="col-7"><hr></div>
+                  <div class="col-1 fw-bold">6.95$</div>
+                  <div class="row">
+                    <div class="col-12 text-muted">
+                      Lorem, deren, trataro, filede, nerada
+                    </div>
+                  </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row mt-5">
+                <div class="col-6 ps-3">
+                  <div class="row ps-5">
+                    <p class="col-3 mb-3 orange fw-bold" style="font-size: 17px;">Greek Salad</p>
+                    <div class="col-8"><hr></div>
+                  <div class="col-1 fw-bold">5.95$</div>
+                  <div class="row">
+                    <div class="col-12 text-muted">
+                      Fresh spinach, crisp romaine, tomatoes, and Greek olives
+                    </div>
+                  </div>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="row ps-5">
+                    <p class="col-3 mb-3 orange fw-bold" style="font-size: 18px;">Spinach Salad</p>
+                    <div class="col-8"><hr></div>
+                  <div class="col-1 fw-bold">6.95$</div>
+                  <div class="row">
+                    <div class="col-12 text-muted">
+                      Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
+                    </div>
+                  </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row mt-5">
+                <div class="col-6 ps-3">
+                  <div class="row ps-5">
+                    <p class="col-3 mb-3 orange fw-bold" style="font-size: 17px;">Lobster Rol</p>
+                    <div class="col-8"><hr></div>
+                  <div class="col-1 fw-bold">12.95$</div>
+                  <div class="row">
+                    <div class="col-12 text-muted">
+                      Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
+                    </div>
+                  </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="tab-pane fade" id="pills-starters" role="tabpanel" aria-labelledby="pills-starters-tab">
+            <div class="row mt-5">
+              <div class="col-6 ps-3">
+                <div class="row ps-5">
+                  <p class="col-3 mb-3 orange fw-bold" style="font-size: 17px;">Tuscan Grilled</p>
+                  <div class="col-8"><hr></div>
+                <div class="col-1 fw-bold">9.95$</div>
+                <div class="row">
+                  <div class="col-12 text-muted">
+                    Lorem, deren, trataro, filede, nerada
+                  </div>
+                </div>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="row ps-5">
+                  <p class="col-4 mb-3 orange fw-bold" style="font-size: 18px;">Mozzarella Stick</p>
+                  <div class="col-7"><hr></div>
+                <div class="col-1 fw-bold">6.95$</div>
+                <div class="row">
+                  <div class="col-12 text-muted">
+                    Lorem, deren, trataro, filede, nerada
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+            <div class="row mt-5">
+              <div class="col-6 ">
+                <div class="row ps-5">
+                  <p class="col-3 mb-3 orange fw-bold" style="font-size: 18px;">Bread barrel</p>
+                  <div class="col-8"><hr></div>
+                <div class="col-1 fw-bold">6.95$</div>
+                <div class="row">
+                  <div class="col-12 text-muted">
+                    Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tab-pane fade" id="pills-salads" role="tabpanel" aria-labelledby="pills-salads-tab">
+            <div class="row mt-5">
+              <div class="col-6 ">
+                <div class="row ps-5">
+                  <p class="col-3 mb-3 orange fw-bold" style="font-size: 18px;">Bread barrel</p>
+                  <div class="col-8"><hr></div>
+                <div class="col-1 fw-bold">6.95$</div>
+                <div class="row">
+                  <div class="col-12 text-muted">
+                    Fresh spinach, crisp romaine, tomatoes, and Greek olives
+                  </div>
+                </div>
+                </div>
+              </div>
+              <div class="col-6 ps-5">
+                <div class="row ps-2">
+                  <p class="col-4 mb-3 orange fw-bold" style="font-size: 18px;">Caesar Selections</p>
+                  <div class="col-7"><hr></div>
+                <div class="col-1 fw-bold">8.95$</div>
+                <div class="row">
+                  <div class="col-12 text-muted">
+                    Lorem, deren, trataro, filede, nerada
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+            <div class="row mt-5">
+              <div class="col-6 ps-3">
+                <div class="row ps-5">
+                  <p class="col-3 mb-3 orange fw-bold" style="font-size: 17px;">Crab Cake</p>
+                  <div class="col-8"><hr></div>
+                <div class="col-1 fw-bold">7.95$</div>
+                <div class="row">
+                  <div class="col-12 text-muted">
+                    A delicate crab cake served on a toasted roll with lettuce and tartar sauce
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tab-pane fade" id="pills-specially" role="tabpanel" aria-labelledby="pills-specially-tab">
+            <div class="row mt-5">
+              <div class="col-6 ps-3">
+                <div class="row ps-5">
+                  <p class="col-3 mb-3 orange fw-bold" style="font-size: 17px;">Greek Salad</p>
+                  <div class="col-8"><hr></div>
+                <div class="col-1 fw-bold">5.95$</div>
+                <div class="row">
+                  <div class="col-12 text-muted">
+                    Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
+                  </div>
+                </div>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="row ps-5">
+                  <p class="col-3 mb-3 orange fw-bold" style="font-size: 18px;">Spinach Salad</p>
+                  <div class="col-8"><hr></div>
+                <div class="col-1 fw-bold">6.95$</div>
+                <div class="row">
+                  <div class="col-12 text-muted">
+                    Lorem, deren, trataro, filede, nerada
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+            <div class="row mt-5">
+              <div class="col-6 ps-3">
+                <div class="row ps-5">
+                  <p class="col-3 mb-3 orange fw-bold" style="font-size: 17px;">Greek Salad</p>
+                  <div class="col-8"><hr></div>
+                <div class="col-1 fw-bold">5.95$</div>
+                <div class="row">
+                  <div class="col-12 text-muted">
+                    Lorem, deren, trataro, filede, nerada
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
     <div style="height: 1000px">
         <!-- just to make scrolling effect possible -->
 			
@@ -401,7 +709,8 @@
 
 
 
-
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script>
       $(document).ready(function(){
         $('.dropdown-submenu a.test').on("click", function(e){
